# lab6-7

./: AKClasses.cpp  AKClasses.h  CMakeLists.txt  ConsoleApplication4.cpp  F  Functions.cpp  GNUmakefile  Header.h  Makefile  Makefile.txt  Prog  README.md  README.txt  SixSeven.cpp  Source.cpp  TASK.md  answer  c.cpp  checking.cpp  checking.h  class.cpp  class.h  class.hpp  classes.cpp  classes.h  classes.hpp  example.txt  fromfile.txt  func.cpp  func.h  function.cpp  function.h  functions.cpp  functions.h  funs.h  geni.h  header.cpp  header.h  header.hpp  in.txt  (+20 more)
Lab_6/: main.cpp  makefile  test.txt
googletests/: CMakeLists.txt  test.cpp
hgh/: DefaultOutput.txt
lab6/: Header.h  Makefile  flags.cpp  fromFileExample.txt  func.cpp  funcs.cpp  funcs.hpp  funcs6.cpp  lab6.cpp  main.cpp  makefile  student_id.cpp  student_id.hpp  toFile.txt
lab7/: Makefile  classes.h  flags.cpp  fromFileExample.txt  func.cpp  funcs.cpp  funcs7.cpp  lab7.cpp  main.cpp  makefile  mgtuu.cpp  mgtuu.h  miem.cpp  miem.h  student_id.cpp  student_id.h  template_generator.cpp  template_generator.h
lab_6/: GNUmakefile  Makefile  classes.h  main.cpp  run
lab_6/src/: main.cpp  objects.cpp
lab_6_7/: CMakeLists.txt  Makefile.txt  input.txt  lab_6  main.cpp  output.txt
lab_7/: GNUmakefile  Makefile  answer  classes.cpp  classes.h  main.cpp
lab_7/src/: main.cpp
laba6/: functions.cpp  functions.h  tr.txt
laba7/: Makefile  main.cpp  qwerty.txt
src/: classes.cpp  classmake.cpp  classmake.h  tests.cpp
testfiles/: test1.txt  test1_ans.txt  test2.txt  test2_ans.txt  test3.txt  test3_ans.txt
